examples/test_package/Double_dc_only_report_tool_new/steps/benchzebra_precise_run4/#test_results_result.txt
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.% Problog Inference Result：
zebra([house(norwegian,yellow,fox,water,kools), house(ukrainian,blue,horse,tea,chesterfields), house(english,red,snail,milk,winstons), house(spanish,ivory,dog,orange_juice,lucky_strikes), house(japanese,green,zebra,coffee,parliaments)]) = 1.0000